crates/ruff_python_parser/tests/snapshots/invalid_syntax@decorator_named_expression_py37.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/decorator_named_expression_py37.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(
            20,
        ),
        range: 0..85,
        body: [
            FunctionDef(
                StmtFunctionDef {
                    node_index: NodeIndex(
                        19,
                    ),
                    range: 45..84,
                    is_async: false,
                    decorator_list: [
                        Decorator {
                            range: 45..69,
                            node_index: NodeIndex(
                                14,
                            ),
                            expression: Call(
                                ExprCall {
                                    node_index: NodeIndex(
                                        13,
                                    ),
                                    range: 46..69,
                                    func: Named(
                                        ExprNamed {
                                            node_index: NodeIndex(
                                                9,
                                            ),
                                            range: 47..63,
                                            target: Name(
                                                ExprName {
                                                    node_index: NodeIndex(
                                                        1,
                                                    ),
                                                    range: 47..48,
                                                    id: Name("x"),
                                                    ctx: Store,
                                                },
                                            ),
                                            value: Lambda(
                                                ExprLambda {
                                                    node_index: NodeIndex(
                                                        8,
                                                    ),
                                                    range: 52..63,
                                                    parameters: Some(
                                                        Parameters {
                                                            range: 59..60,
                                                            node_index: NodeIndex(
                                                                2,
                                                            ),
                                                            posonlyargs: [],
                                                            args: [
                                                                ParameterWithDefault {
                                                                    range: 59..60,
                                                                    node_index: NodeIndex(
                                                                        5,
                                                                    ),
                                                                    parameter: Parameter {
                                                                        range: 59..60,
                                                                        node_index: NodeIndex(
                                                                            4,
                                                                        ),
                                                                        name: Identifier {
                                                                            id: Name("x"),
                                                                            range: 59..60,
                                                                            node_index: NodeIndex(
                                                                                3,
                                                                            ),
                                                                        },
                                                                        annotation: None,
                                                                    },
                                                                    default: None,
                                                                },
                                                            ],
                                                            vararg: None,
                                                            kwonlyargs: [],
                                                            kwarg: None,
                                                        },
                                                    ),
                                                    body: Name(
                                                        ExprName {
                                                            node_index: NodeIndex(
                                                                7,
                                                            ),
                                                            range: 62..63,
                                                            id: Name("x"),
                                                            ctx: Load,
                                                        },
                                                    ),
                                                },
                                            ),
                                        },
                                    ),
                                    arguments: Arguments {
                                        range: 64..69,
                                        node_index: NodeIndex(
                                            12,
                                        ),
                                        args: [
                                            Name(
                                                ExprName {
                                                    node_index: NodeIndex(
                                                        11,
                                                    ),
                                                    range: 65..68,
                                                    id: Name("foo"),
                                                    ctx: Load,
                                                },
                                            ),
                                        ],
                                        keywords: [],
                                    },
                                },
                            ),
                        },
                    ],
                    name: Identifier {
                        id: Name("bar"),
                        range: 74..77,
                        node_index: NodeIndex(
                            15,
                        ),
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 77..79,
                        node_index: NodeIndex(
                            16,
                        ),
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(
                                    18,
                                ),
                                range: 81..84,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(
                                            17,
                                        ),
                                        range: 81..84,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
## Unsupported Syntax Errors

  |
1 | # parse_options: { "target-version": "3.7" }
2 | @(x := lambda x: x)(foo)
  |   ^^^^^^^^^^^^^^^^ Syntax Error: Cannot use named assignment expression (`:=`) on Python 3.7 (syntax was added in Python 3.8)
3 | def bar(): ...
  |


  |
1 | # parse_options: { "target-version": "3.7" }
2 | @(x := lambda x: x)(foo)
  |   ^^^^^^^^^^^^^^^^ Syntax Error: Cannot use assignment expression outside function call arguments in a decorator on Python 3.7 (syntax was added in Python 3.9)
3 | def bar(): ...
  |
